--- a/src/main/resources/templates/ReportTemplate.html
+++ b/src/main/resources/templates/ReportTemplate.html
@@ -1,8 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <style>
+        table {
+            border-collapse: collapse;
+        }
+        td, th {
+            padding-right: 20px;
+            text-align: left;
+        }
+    </style>
+    </head>
     <body>
         <p>Hello [first_name],</p>
         <p>The market has closed for today. Your stocks have made the following movements:</p>
+        <p>Total Asset Value: <b>$[total_asset_value] ([total_asset_change])</b></p>
         <div>
             [stock_table]
         </div>
