Added currency formatter and adjusted position comparator.

--- a/src/main/resources/templates/ReportTemplate.html
+++ b/src/main/resources/templates/ReportTemplate.html
@@ -14,7 +14,7 @@
     <body>
         <p>Hello [first_name],</p>
         <p>The market has closed for today. Your stocks have made the following movements:</p>
-        <p>Total Asset Value: <b>$[total_asset_value] ([total_asset_change])</b></p>
+        <p>Total Asset Value: <b>[total_asset_value] ([total_asset_change])</b></p>
         <div>
             [stock_table]
         </div>
